Fix line height on mobile

--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -66,6 +66,7 @@
     padding: 18px;
     font-size: 25px;
     letter-spacing: 10px;
+    line-height: 75px;
   }
 
   .logo {
